--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <html>
 <head>
-  <title>MPKS krautuvju ielāde...</title>
+  <title>MPKS šķeldas krautuvju ielāde...</title>
   <link rel = "icon" type = "image/x-icon" href = "favicon.ico">
   <!-- jQuery-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
