--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <script type="text/javascript">
 var s ="";
 
-while (s!= "mypassword")
+while (s!= "marcis")
 {
-s=prompt("please enter your password");
-if (s=="mypassword")
+s=prompt("Ievadīt, lūdzu, paroli!");
+if (s=="marcis")
 {
 window.location.href="correct.html"; //page to redirect if password entered is correct
 
 }
 else
 {
-alert("Incorrect password-Try again");
+alert("Jāievada pareizā parole!");
 
 }
 }
